--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,16 @@
 
 
 .container, .navbar{
-  position: relative;
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 20px;
-  box-sizing: border-box; }
+    position: relative;
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box; }
 
 header {
     width: 100%;
-    height: 500px;
+    height: 90px;
     padding-top: 30px;
     position: relative;   
 }
@@ -18,9 +18,10 @@ header {
 /*logo*/
 
 .navbar a img{
-  float:left;
-  width:75;
-  height:80px;
+    float:left;
+    width:85px;
+    height:90px;
+    margin-left: -2em;
 }
   
 header nav{
@@ -28,26 +29,121 @@ header nav{
     margin-top: 10px;
 }
 
-header nav ul li{
-    list-style: none;
-    display: inline;
+a {
+  color: #fff;
+  text-decoration: none;
 }
 
-.slider_wrapper{
+header nav ul>li{
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #fff;
+  padding-right: 40px;
+}
+
+header nav ul li{
+    list-style: none;
+    display: inline-block;
+}
+
+.button.button-primary,
+button.button-primary,
+input[type="submit"].button-primary,
+input[type="reset"].button-primary,
+input[type="button"].button-primary {
+  color: #FFF;
+  background-color: #F660FF;
+  border-color: #F660FF; 
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-decoration: none;
+  white-space: nowrap;
+}
+.button.button-primary:hover,
+button.button-primary:hover,
+input[type="submit"].button-primary:hover,
+input[type="reset"].button-primary:hover,
+input[type="button"].button-primary:hover,
+.button.button-primary:focus,
+button.button-primary:focus,
+input[type="submit"].button-primary:focus,
+input[type="reset"].button-primary:focus,
+input[type="button"].button-primary:focus {
+  color: #000;
+  background-color: #CCC7B5;
+  border-color: #CCC7B5; 
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: lowercase;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.intro {
     width: 100%;
     height: 570px;
     position: relative;
     overflow: hidden;
+    background-image: url(../images/collab3.jpg);
+    background-size: cover;
 }
+
+#slide-dots nav ul{
+    margin-left: 45%%;
+    margin-top: 275px;
+}
+
+#slide-dots nav ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 5px 5px;
+}
+
+#slide-dots nav ul li a img{
+    width: 12px;
+    height: 12px; 
+}
+
+.container #how-it-works, #features-and-services, #our-happy-customers{
+    padding-top: 30px;
+    text-align: center;
+
+}
+
+.four.columns img{
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+
+/*.slider_wrapper{
+    width: 100%;
+    height: 570px;
+    position: relative;
+    overflow: hidden;
+    /*background-image: url(../images/collab3.jpg);
+    background-size: cover;
+}*/
+
 
 #main-headline {
     margin-left: 100px;
     padding-left: 80px;
-    font-size:48px;
-    color:#000000;
+    font-size:39px;
+    color:#ffffff;
     font-weight:bold;
-    /*background-color:#2d8449; */
     font-family: 'Museo Slab', Helvetica, Arial, sans-serif;
+}
+
+.main-text {
+    margin-left: 100px;
+    padding-left: 80px;
+    color: #fff;
 }
  
 
