--- a/css/styles.css
+++ b/css/styles.css
@@ -24,14 +24,10 @@ header {
     margin-left: -2em;
 }
   
+/*header*/  
 header nav{
     float: right;
     margin-top: 10px;
-}
-
-a {
-  color: #fff;
-  text-decoration: none;
 }
 
 header nav ul>li{
@@ -45,6 +41,18 @@ header nav ul li{
     list-style: none;
     display: inline-block;
 }
+
+/*nav links*/
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #CCC7B5; }
+
+/*buttons*/ 
 
 .button.button-primary,
 button.button-primary,
@@ -71,17 +79,18 @@ button.button-primary:focus,
 input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
-  color: #000;
-  background-color: #CCC7B5;
-  border-color: #CCC7B5; 
+  color: #fff;
+  background-color: #d257d9;
+  border-color: #d257d9; 
   font-size: 14px;
   font-weight: 600;
   line-height: 38px;
   letter-spacing: .1rem;
-  text-transform: lowercase;
   text-decoration: none;
   white-space: nowrap;
 }
+
+/* intro-contains slide */
 
 .intro {
     width: 100%;
@@ -91,6 +100,7 @@ input[type="button"].button-primary:focus {
     background-image: url(../images/collab3.jpg);
     background-size: cover;
 }
+
 
 #slide-dots nav ul{
     margin-left: 45%%;
@@ -114,10 +124,9 @@ input[type="button"].button-primary:focus {
 
 }
 
-.four.columns img{
+.four.columns img{  /* How do I center elements inside the columns in Skeleton? */
     margin-left: auto;
     margin-right: auto;
-
 }
 
 
@@ -144,6 +153,20 @@ input[type="button"].button-primary:focus {
     margin-left: 100px;
     padding-left: 80px;
     color: #fff;
+}
+
+.overlay {  /* Trying to achieve a transparent overlay here. */
+    position: absolute;
+    z-index: 1000; 
+    height: 575px;
+    width: auto;
+    background: white;
+    top: 0px;
+    left: 0px;
+    margin-left: 0px; 
+    margin-top: 0px; 
+    box-shadow: 10px 10px 10px rgba(0, 182, 198, 0.5); 
+
 }
  
 
