--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,13 @@
   width: 100px;
 }
 
+.hundred-2 {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
 .container, .navbar{
     position: relative;
     width: 100%;
@@ -141,22 +148,40 @@ input[type="button"].button-primary:focus {
     font-size:39px;
     color:#ffffff;
     font-weight:bold;
-    font-family: 'Museo Slab', Helvetica, Arial, sans-serif;
 }
 
 .main-text {
     margin-left: 100px;
     padding-left: 80px;
     color: #fff;
+    font-family: 'Raleway', "HelveticaNeue", "Helvetica Neue", Arial, sans-serif;
+}
+
+h3, #main-headline {
+   font-family: 'Museo Slab', "HelveticaNeue", "Helvetica Neue", Arial, sans-serif;
+}
+
+h5 {
+  font-size: 18px;
+}
+
+h6, h5 {
+margin-bottom: 2rem;
+
+}
+
+.pink {
+  color: #F660FF; 
+  margin-bottom: 0px;
 }
 
 .overlay {  /* Trying to achieve a transparent overlay here. */
 /*    position: absolute;
     z-index: 1000; */
-    background-color: rgba(76,32,79,.7);
+    background-color: rgba(0,188,204,.7);
     height: 100%;
-/*    width: auto;
-/*    background: white;*/
+/*    width: auto; */
+/*    background-color: (0,0,0,.5; */
 /*    top: 0px;
     left: 0px;
     margin-left: 0px; 
@@ -165,4 +190,13 @@ input[type="button"].button-primary:focus {
 */
 }
  
+ .overlay-2 {   /
+    width: 100%;
+    height: 100%;
+    background-color: #00bccc;
+  }
+
+ 
+
+  
 
