--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ header {
 header nav{
     float: right;
     margin-top: 10px;
+    display: block;
 }
 
 header nav ul>li{
@@ -154,11 +155,15 @@ input[type="button"].button-primary:focus {
     margin-left: 100px;
     padding-left: 80px;
     color: #fff;
-    font-family: 'Raleway', "HelveticaNeue", "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Raleway', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-h3, #main-headline {
-   font-family: 'Museo Slab', "HelveticaNeue", "Helvetica Neue", Arial, sans-serif;
+#main-headline, .main-text {
+    display: block;
+}
+
+h3, #main-headline{
+   font-family: 'Museo Slab', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h5 {
@@ -190,10 +195,14 @@ margin-bottom: 2rem;
 */
 }
  
- .overlay-2 {   /
+ .overlay-2 {   
     width: 100%;
     height: 100%;
     background-color: #00bccc;
+  }
+
+  #cta, .footer, #ready{
+    color: #fff;
   }
 
  
