--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,15 @@
   overflow: hidden;
 }
 
+#blue {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  /*background-image: url(../images/color-patch.png);
+  background-position: center;*/
+  overflow: hidden;
+}
+
 .container, .navbar{
     position: relative;
     width: 100%;
@@ -132,8 +141,14 @@ input[type="button"].button-primary:focus {
     height: 12px; 
 }
 
-.container #how-it-works, #features-and-services, #our-happy-customers{
+.container #features-and-services, #our-happy-customers{
     padding-top: 30px;
+    text-align: center; 
+
+}
+
+.container #how-it-works {
+    padding-top: 7.5rem;
     text-align: center;
 
 }
@@ -144,16 +159,16 @@ input[type="button"].button-primary:focus {
 }
 
 #main-headline {
-    margin-left: 100px;
-    padding-left: 80px;
+    /*margin-left: 100px;
+    padding-left: 80px;*/
     font-size:39px;
     color:#ffffff;
     font-weight:bold;
 }
 
 .main-text {
-    margin-left: 100px;
-    padding-left: 80px;
+    /*margin-left: 100px;
+    padding-left: 80px;*/
     color: #fff;
     font-family: 'Raleway', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -162,7 +177,7 @@ input[type="button"].button-primary:focus {
     display: block;
 }
 
-h3, #main-headline{
+h3, #main-headline, #ready{
    font-family: 'Museo Slab', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -175,36 +190,114 @@ margin-bottom: 2rem;
 
 }
 
+p {
+  font-weight: 100;
+}
+
 .pink {
   color: #F660FF; 
   margin-bottom: 0px;
 }
 
-.overlay {  /* Trying to achieve a transparent overlay here. */
-/*    position: absolute;
-    z-index: 1000; */
+.overlay { 
+
     background-color: rgba(0,188,204,.7);
     height: 100%;
-/*    width: auto; */
-/*    background-color: (0,0,0,.5; */
-/*    top: 0px;
-    left: 0px;
-    margin-left: 0px; 
-    margin-top: 0px; */
-/*    box-shadow: 10px 10px 10px rgba(0, 182, 198, 0.5); 
-*/
+
 }
  
  .overlay-2 {   
     width: 100%;
     height: 100%;
     background-color: #00bccc;
+    padding-right: 0px;
   }
 
   #cta, .footer, #ready{
     color: #fff;
   }
 
+  #cta {
+    padding-top: 30px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+  }
+
+  #ready{
+    padding-top: 0px;
+    font-weight: 100;
+    font-size: 22px;
+
+  }
+
+/*footer*/  
+.footer nav{
+    float: left;
+    margin-top: 10px;
+    padding-bottom: 0px;
+    height: 25px  ;
+}
+
+.footer nav ul li {
+    font-size: 12px;
+    text-transform: uppercase;
+    list-style: none;
+    display: inline-block;
+}
+#jottly-footer {
+  margin-top: 0px;
+  padding-top: 0px;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+
+}
+
+@media (min-width: 400px) {
+ 
+
+    #main-headline, .main-text{
+   
+    width: 80%;
+
+    header {
+    width: 100%;
+    height: 90px;
+    padding-top: 30px;
+    position: relative;   
+}
+
+}
+
+
+/*logo*/
+
+.navbar a img{
+    margin-left: -30px;
+    width:85px;
+    height:90px;
+    
+}
+
+}
+
+
+
+}
+
+
+
+/* For devices larger than 550px */
+@media (min-width: 550px) {
+.navbar a img{
+    margin-left: 0px;
+    width:85px;
+    height:90px;
+   
+}
+
+
+  }
  
 
   
