--- a/css/styles.css
+++ b/css/styles.css
@@ -243,20 +243,18 @@ p {
 
   #cta {
     padding-top: 40px;
-    padding-bottom: 30px;
     text-align: center;
   }
 
   #ready {
-    /*padding-top: 50px;*/
     font-weight: 100;
     font-size: 2.2rem;
+    font-style: italic;
   }
 
 /*footer*/  
 .footer nav{
     float: left;
-    /*padding-bottom: 50px;*/
     height: 25px;
 }
 
@@ -272,19 +270,12 @@ p {
   display: inline-block;
 }
 
-/*#get-email {
-  display: inline-block;
-}*/
-
 
 #get-email input[type="email"], textarea, select{
   float: right;
   border-radius: 7px;
   border-color: #fff;
   font-size: 1.5rem;
-  /*padding: 0px 40px; */
-  /*padding-left: 20px;*/
-  /*padding-right: 110px;*/
   text-align: center;
   height: 38px;
   box-sizing: border-box; 
@@ -293,9 +284,7 @@ p {
 
 #jottly-footer {
   float: right;
-  /*margin-bottom: 0px;*/
   padding-top: 5px;
-  /*margin-top: 0px;*/
   display: inline-block;
   font-size: 12px;
   color: #fff;
@@ -318,21 +307,19 @@ textarea {
           appearance: none; }
 
 .signup {
-  padding-left: 500px;
-  margin: 0 auto;
-  padding-bottom: 60px;
-
+  text-align: center;
   }
+
+.signup a {
+  padding-bottom: 2.5rem;
+}
 
 .signup .button.button-primary {
   font-family: 'Raleway', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 2rem;
   text-transform: uppercase;
-  /*text-align: center;*/
   height: 40px;
   padding: 0 45px;
-  /*color: #fff
-  border-radius: 8px;*/
   border-radius: 8px;
   box-sizing: border-box; 
 
@@ -356,7 +343,6 @@ textarea {
     }
 
     #main-headline {
-    /*margin-left: 100px;*/
     padding-top: 20px;
     font-size:39px;
     color:#ffffff;
@@ -365,11 +351,6 @@ textarea {
 
    #jottly-footer {
   float: left;}
-
-  .signup {
-  padding-left: 100px;
-
-  }
 
 } /*@media 400px*/
 
@@ -387,17 +368,13 @@ textarea {
   }/*header*/
 
   .signup {
-  padding-left: 180px;
-  margin: 0 auto;
   padding-bottom: 40px;
 
   }
 
   #jottly-footer {
   float: right;
-  /*margin-bottom: 0px;*/
   padding-top: 5px;
-  /*margin-top: 0px;*/
   display: inline-block;
   font-size: 12px;
   color: #fff;
@@ -410,9 +387,8 @@ textarea {
 @media (min-width: 750px) {
 
 .signup {
-  padding-left: 400px;
   margin: 0 auto;
-  padding-bottom: 40px;
+  padding-bottom: 6rem;
 
   }
 
